# restaurant-menu-backend

./: .env  README.md  menu_data.json  pyproject.toml
app/: config.py  crud.py  database.py  main.py  models.py  schemas.py  scraper.py
