[tool.poetry]
name = "restaurant-menu-api"
version = "0.1.0"
description = "A FastAPI application for managing restaurant menu items with scraping capabilities"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.104.1"
sqlalchemy = "^2.0.23"
pymysql = "^1.1.0"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
uvicorn = "^0.24.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"